--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "npx prettier **/**/*.{js,jsx} --write"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "axios": "^1.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
